--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "cra-template": "1.2.0",
     "dotenv": "^16.4.7",
     "framer-motion": "^12.4.2",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.0",
+    "moment": "^2.30.1",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-data-table-component": "^7.6.2",
@@ -17,7 +20,8 @@
     "react-scripts": "5.0.1",
     "react-spinners": "^0.15.0",
     "react-toastify": "^11.0.3",
-    "reactjs-localstorage": "^1.0.1"
+    "reactjs-localstorage": "^1.0.1",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
