--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "dotenv": "^16.4.7",
     "framer-motion": "^12.4.2",
     "html2canvas": "^1.4.1",
-    "jspdf": "^3.0.0",
     "moment": "^2.30.1",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
@@ -47,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "serve": "^14.2.4"
   }
 }
