--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "reactjs-localstorage": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
