--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-scripts": "5.0.1",
     "react-spinners": "^0.15.0",
     "react-toastify": "^11.0.3",
-    "reactjs-localstorage": "^1.0.1"
+    "reactjs-localstorage": "^1.0.1",
+    "serve": "^14.2.4"
   },
   "scripts": {
     "start": "serve -s build",
@@ -42,8 +43,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "serve": "^14.2.4"
   }
 }
